RESOLVED FIXED82174
[EFL][DRT] Catch the "title,changed" signal
https://bugs.webkit.org/show_bug.cgi?id=82174
Summary [EFL][DRT] Catch the "title,changed" signal
Chris Dumez
Reported 2012-03-26 01:29:01 PDT
EFL's DRT (DumpRenderTreeChrome) needs to catch the "title,changed" signal and so that the following test cases no longer need to be skipped: - fast/dom/title-text-property.html - fast/dom/title-text-property-2.html
Attachments
Proposed patch (3.66 KB, patch)
2012-03-26 01:44 PDT, Chris Dumez
no flags
Proposed patch (2.82 KB, patch)
2012-04-05 01:07 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-03-26 01:44:45 PDT
Created attachment 133749 [details] Proposed patch
Gyuyoung Kim
Comment 2 2012-03-26 01:55:38 PDT
Comment on attachment 133749 [details] Proposed patch Looks good to me.
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-03-26 07:03:22 PDT
Comment on attachment 133749 [details] Proposed patch Looks fine, thanks for the patch.
Chris Dumez
Comment 4 2012-04-05 01:07:04 PDT
Created attachment 135777 [details] Proposed patch Rebase on master and update changelogs.
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-04-05 08:45:52 PDT
Comment on attachment 135777 [details] Proposed patch Looks good.
WebKit Review Bot
Comment 6 2012-04-10 09:22:40 PDT
Comment on attachment 135777 [details] Proposed patch Clearing flags on attachment: 135777 Committed r113724: <http://trac.webkit.org/changeset/113724>
WebKit Review Bot
Comment 7 2012-04-10 09:22:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.