[EFL][DRT] Catch the "title,changed" signal https://bugs.webkit.org/show_bug.cgi?id=82174

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-04-10
Reviewed by Gustavo Noronha Silva.

Tools:

EFL's DumpRenderTree now catches the "title,changed" signal, and
prints out the needed information.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::onTitleChanged):

LayoutTests:

Unskip tests which requires EFL's DumpRenderTree to catch the
"title,changed" signal and print out information, now that it
is implemented.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/101033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113724 268f45cc-cd09-0410-ab3c-d52691b4dbfc